# lumen

./: Cargo.toml  README.md  blog-tty-fix.md  flake.nix
src/: main.rs
src/command/diff/: annotation.rs  app.rs  coordinates.rs  diff_algo.rs  git.rs  mod.rs  state.rs  theme.rs  types.rs
src/command/diff/highlight/: config.rs  mod.rs  queries.rs
src/command/diff/render/: diff_view.rs  footer.rs  mod.rs  modal.rs  sidebar.rs
src/config/: cli.rs
